Week 7 update/ Housekeeping

--- a/2025-projects/team-1/Scratch_Models_Finalized/MultiTask/V4.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/MultiTask/V4.ipynb
@@ -1908,9 +1908,10 @@
     "plt.title('Cps R2')\n",
     "plt.legend()\n",
     "\n",
-    "plt.show()\n",
+    "plt.savefig(\"./graphs/MultiTaskV4_acc.png\")  \n",
     "\n",
-    "plt.savefig(\"./graphs/MultiTaskV4_acc.png\")  "
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -1979,11 +1980,17 @@
     "    output_dict=True,\n",
     "    zero_division=0\n",
     ")\n",
+    "f1_scores = np.array([report[str(i)]['f1-score'] for i in range(2)])\n",
+    "supports = np.array([report[str(i)]['support'] for i in range(2)])\n",
+    "iou = f1_scores / (2 - f1_scores)\n",
     "\n",
     "\n",
     "# Output\n",
     "print(\"CLOUD MASK REPORT:\\n\", classification_report(all_labels, all_preds, labels=[0, 1], digits=3))\n",
-    "print(\"CONFUSION MATRIX:\\n\", confusion_matrix(all_labels, all_preds, labels=[0, 1]))"
+    "print(\"CONFUSION MATRIX:\\n\", confusion_matrix(all_labels, all_preds, labels=[0, 1]))\n",
+    "print(\"\\nIOU:\", iou)\n",
+    "print(\"Unweighted IoU:\", np.mean(iou))\n",
+    "print(\"Weighted IoU:\", np.average(iou, weights=supports))"
    ]
   },
   {
