finalized code + update .gitignore

--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Mask/Mask_unet_data_processor.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Mask/Mask_unet_data_processor.ipynb
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14999it [01:44, 143.38it/s]\n"
+      "14973it [09:22, 26.62it/s]\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "#CREATE DATASET\n",
     "\n",
     "max_images = 15000\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
