--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Mask/Mask_with_mlp.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Mask/Mask_with_mlp.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "c8faf57b-9c43-4055-a05a-ef1a5656c4d5",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#IMPORTS\n",
@@ -41,11 +37,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "ad484d1f-fb92-4d20-9405-9e32bcfcbf23",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#HYPERPARMETERS\n",
@@ -63,11 +55,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "fd212074-3642-4c9c-8693-e0d2cff5122b",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#GET TARGET DATA\n",
@@ -81,18 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d691cbe3-cc3d-4f98-9a6c-7b31de7fe1d7",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#CREATE DATASET\n",
     "\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
@@ -111,13 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9fa4cd92-f2d6-4289-aeec-87de24e824d6",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#CREATE DATALOADERS\n",
@@ -127,22 +107,18 @@
     "test_size = len(dataset) - train_size - val_size\n",
     "\n",
     "generator = torch.Generator().manual_seed(1)\n",
-    "train_dataset, val_dataset, test_dataset = random_split(dataset, [train_size, val_size, test_size])\n",
+    "train_dataset, val_dataset, test_dataset = random_split(dataset, [train_size, val_size, test_size], generator=generator)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, generator=generator)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "50dbd345-3457-4f3a-9be6-4aedd6321fe5",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#CREATE MODEL\n",
@@ -173,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "122080e7-7691-4d4c-bc65-ecaa479bfca7",
    "metadata": {},
    "outputs": [],
@@ -225,363 +201,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "4ccdbd20-a62d-4091-8968-85f5a6f48dec",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:22<00:00, 58.11it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1 | Train Loss: 0.8580 | Train Acc: 0.8289 | Val Loss: 0.3178 | Val Acc: 0.8381\n"
+      "Epoch: 1 | Train Loss: 0.4820 | Train Acc: 0.8431 | Val Loss: 0.2779 | Val Acc: 0.8816\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.05it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.10it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 2 | Train Loss: 0.2985 | Train Acc: 0.8649 | Val Loss: 0.2871 | Val Acc: 0.8728\n"
+      "Epoch: 2 | Train Loss: 0.2806 | Train Acc: 0.8800 | Val Loss: 0.2831 | Val Acc: 0.8733\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.51it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.96it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 3 | Train Loss: 0.2815 | Train Acc: 0.8777 | Val Loss: 0.2660 | Val Acc: 0.8909\n"
+      "Epoch: 3 | Train Loss: 0.2737 | Train Acc: 0.8861 | Val Loss: 0.2664 | Val Acc: 0.8957\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.81it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.94it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 4 | Train Loss: 0.2659 | Train Acc: 0.8882 | Val Loss: 0.2653 | Val Acc: 0.8873\n"
+      "Epoch: 4 | Train Loss: 0.2669 | Train Acc: 0.8906 | Val Loss: 0.3038 | Val Acc: 0.8550\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.79it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.34it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 5 | Train Loss: 0.2606 | Train Acc: 0.8924 | Val Loss: 0.2760 | Val Acc: 0.8743\n"
+      "Epoch: 5 | Train Loss: 0.2618 | Train Acc: 0.8940 | Val Loss: 0.2518 | Val Acc: 0.9071\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.22it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.38it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 6 | Train Loss: 0.2496 | Train Acc: 0.8978 | Val Loss: 0.2345 | Val Acc: 0.9092\n"
+      "Epoch: 6 | Train Loss: 0.2534 | Train Acc: 0.8967 | Val Loss: 0.2398 | Val Acc: 0.9082\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.80it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.17it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 7 | Train Loss: 0.2423 | Train Acc: 0.9014 | Val Loss: 0.2394 | Val Acc: 0.9013\n"
+      "Epoch: 7 | Train Loss: 0.2481 | Train Acc: 0.8977 | Val Loss: 0.2332 | Val Acc: 0.9081\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.34it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.97it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 8 | Train Loss: 0.2387 | Train Acc: 0.9035 | Val Loss: 0.2382 | Val Acc: 0.9062\n"
+      "Epoch: 8 | Train Loss: 0.2405 | Train Acc: 0.9008 | Val Loss: 0.2240 | Val Acc: 0.9118\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.61it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 9 | Train Loss: 0.2329 | Train Acc: 0.9055 | Val Loss: 0.2463 | Val Acc: 0.8968\n"
+      "Epoch: 9 | Train Loss: 0.2327 | Train Acc: 0.9037 | Val Loss: 0.2304 | Val Acc: 0.9038\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.66it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.56it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10 | Train Loss: 0.2277 | Train Acc: 0.9075 | Val Loss: 0.2366 | Val Acc: 0.9013\n"
+      "Epoch: 10 | Train Loss: 0.2293 | Train Acc: 0.9045 | Val Loss: 0.2137 | Val Acc: 0.9131\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.02it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.05it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 11 | Train Loss: 0.2252 | Train Acc: 0.9078 | Val Loss: 0.2367 | Val Acc: 0.8945\n"
+      "Epoch: 11 | Train Loss: 0.2239 | Train Acc: 0.9066 | Val Loss: 0.2122 | Val Acc: 0.9153\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 76.00it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.09it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 12 | Train Loss: 0.2181 | Train Acc: 0.9109 | Val Loss: 0.2106 | Val Acc: 0.9132\n"
+      "Epoch: 12 | Train Loss: 0.2192 | Train Acc: 0.9087 | Val Loss: 0.2121 | Val Acc: 0.9142\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.24it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 13 | Train Loss: 0.2163 | Train Acc: 0.9111 | Val Loss: 0.2105 | Val Acc: 0.9134\n"
+      "Epoch: 13 | Train Loss: 0.2171 | Train Acc: 0.9092 | Val Loss: 0.2230 | Val Acc: 0.9095\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 74.64it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.11it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 14 | Train Loss: 0.2136 | Train Acc: 0.9122 | Val Loss: 0.2020 | Val Acc: 0.9172\n"
+      "Epoch: 14 | Train Loss: 0.2158 | Train Acc: 0.9099 | Val Loss: 0.2079 | Val Acc: 0.9134\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.24it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.09it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 15 | Train Loss: 0.2083 | Train Acc: 0.9138 | Val Loss: 0.2144 | Val Acc: 0.9090\n"
+      "Epoch: 15 | Train Loss: 0.2148 | Train Acc: 0.9100 | Val Loss: 0.2055 | Val Acc: 0.9135\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 74.46it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.19it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 16 | Train Loss: 0.2080 | Train Acc: 0.9135 | Val Loss: 0.2004 | Val Acc: 0.9180\n"
+      "Epoch: 16 | Train Loss: 0.2112 | Train Acc: 0.9112 | Val Loss: 0.2128 | Val Acc: 0.9111\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.62it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.72it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 17 | Train Loss: 0.2036 | Train Acc: 0.9149 | Val Loss: 0.1953 | Val Acc: 0.9212\n"
+      "Epoch: 17 | Train Loss: 0.2089 | Train Acc: 0.9116 | Val Loss: 0.2421 | Val Acc: 0.8932\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 75.98it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 18 | Train Loss: 0.2024 | Train Acc: 0.9151 | Val Loss: 0.1947 | Val Acc: 0.9180\n"
+      "Epoch: 18 | Train Loss: 0.2051 | Train Acc: 0.9126 | Val Loss: 0.1925 | Val Acc: 0.9167\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 76.49it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 19 | Train Loss: 0.1998 | Train Acc: 0.9158 | Val Loss: 0.1917 | Val Acc: 0.9185\n"
+      "Epoch: 19 | Train Loss: 0.2005 | Train Acc: 0.9142 | Val Loss: 0.2424 | Val Acc: 0.8916\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 74.08it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.95it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 20 | Train Loss: 0.1976 | Train Acc: 0.9164 | Val Loss: 0.1948 | Val Acc: 0.9171\n"
+      "Epoch: 20 | Train Loss: 0.1979 | Train Acc: 0.9155 | Val Loss: 0.1901 | Val Acc: 0.9175\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:17<00:00, 75.48it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 21 | Train Loss: 0.1957 | Train Acc: 0.9168 | Val Loss: 0.1972 | Val Acc: 0.9136\n"
+      "Epoch: 21 | Train Loss: 0.1952 | Train Acc: 0.9166 | Val Loss: 0.2022 | Val Acc: 0.9131\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 76.57it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 22 | Train Loss: 0.1925 | Train Acc: 0.9185 | Val Loss: 0.2085 | Val Acc: 0.9100\n"
+      "Epoch: 22 | Train Loss: 0.1925 | Train Acc: 0.9179 | Val Loss: 0.2058 | Val Acc: 0.9125\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.30it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.07it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 23 | Train Loss: 0.1904 | Train Acc: 0.9193 | Val Loss: 0.2294 | Val Acc: 0.9126\n"
+      "Epoch: 23 | Train Loss: 0.1887 | Train Acc: 0.9198 | Val Loss: 0.1828 | Val Acc: 0.9211\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.54it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 51.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 24 | Train Loss: 0.1884 | Train Acc: 0.9202 | Val Loss: 0.1812 | Val Acc: 0.9228\n"
+      "Epoch: 24 | Train Loss: 0.1859 | Train Acc: 0.9209 | Val Loss: 0.1735 | Val Acc: 0.9285\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1287/1287 [00:16<00:00, 77.54it/s]\n"
+      "100%|██████████| 1287/1287 [00:24<00:00, 52.18it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 25 | Train Loss: 0.1874 | Train Acc: 0.9205 | Val Loss: 0.1902 | Val Acc: 0.9223\n"
+      "Epoch: 25 | Train Loss: 0.1791 | Train Acc: 0.9239 | Val Loss: 0.1680 | Val Acc: 0.9287\n"
      ]
     }
    ],
@@ -713,6 +684,14 @@
     "print(\"Unweighted:\", np.mean(iou))\n",
     "print(\"Weighted:\", np.average(iou, weights=supports))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ac3889b-b233-4063-85b9-e0e8b2cddace",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
