--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Mask/Mask_with_unet.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Mask/Mask_with_unet.ipynb
@@ -46,9 +46,9 @@
     "train_proportion = .8\n",
     "val_proportion = .1\n",
     "\n",
-    "batch_size = 256\n",
-    "learning_rate = .00001\n",
-    "num_epochs = 25"
+    "batch_size = 128\n",
+    "learning_rate = .00002\n",
+    "num_epochs = 100"
    ]
   },
   {
@@ -77,9 +77,9 @@
     "test_size = len(dataset) - train_size - val_size\n",
     "\n",
     "generator = torch.Generator().manual_seed(1)\n",
-    "train_dataset, val_dataset, test_dataset = random_split(dataset, [train_size, val_size, test_size])\n",
+    "train_dataset, val_dataset, test_dataset = random_split(dataset, [train_size, val_size, test_size], generator=generator)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, generator=generator)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
    ]
@@ -933,7 +933,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:01<00:00,  4.87it/s]\n"
+      "100%|██████████| 12/12 [00:01<00:00,  9.55it/s]\n"
      ]
     },
     {
@@ -943,20 +943,20 @@
       "REPORT:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0      0.863     0.898     0.880   5330079\n",
-      "           1      0.972     0.960     0.966  19245921\n",
+      "           0      0.924     0.906     0.914   5803166\n",
+      "           1      0.971     0.977     0.974  18740066\n",
       "\n",
-      "    accuracy                          0.947  24576000\n",
-      "   macro avg      0.917     0.929     0.923  24576000\n",
-      "weighted avg      0.948     0.947     0.947  24576000\n",
+      "    accuracy                          0.960  24543232\n",
+      "   macro avg      0.947     0.941     0.944  24543232\n",
+      "weighted avg      0.960     0.960     0.960  24543232\n",
       "\n",
       "CONFUSION MATRIX:\n",
-      " [[ 4788788   541291]\n",
-      " [  760673 18485248]]\n",
+      " [[ 5255067   548099]\n",
+      " [  435274 18304792]]\n",
       "\n",
-      "IOU: [0.7862392  0.93420175]\n",
-      "Unweighted: 0.860220474680315\n",
-      "Weighted: 0.9021114123201691\n"
+      "IOU: [0.84236877 0.94901677]\n",
+      "Unweighted: 0.8956927664020939\n",
+      "Weighted: 0.9238002002668984\n"
      ]
     }
    ],
