--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Optical_Distance/Cod_unet_data_processor.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Optical_Distance/Cod_unet_data_processor.ipynb
@@ -36,13 +36,13 @@
     "def get_cod(file):\n",
     "    data = np.load(file)\n",
     "    bands = data['rad']\n",
-    "    cod = data['l2_cod']/1000\n",
+    "    cod = np.log1p(data['l2_cod'])\n",
     "    return bands, cod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "775c92b3-99a5-4ec0-ab61-42bbdc9ac4fa",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14999it [09:33, 26.16it/s]\n"
+      "14973it [01:06, 225.53it/s]\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "#CREATE DATASET\n",
     "\n",
     "max_images = 15000\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
