--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Optical_Distance/Cod_with_mlp.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Optical_Distance/Cod_with_mlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "9d04eabb-9294-4ce8-a4d6-bc57e424f600",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
     "\n",
     "max_images = 200\n",
     "batch_size = 2048\n",
-    "learning_rate = .002\n",
+    "learning_rate = .001\n",
     "num_epochs = 25"
    ]
   },
@@ -63,7 +63,7 @@
     "def get_cod(file):\n",
     "    data = np.load(file)\n",
     "    bands = data['rad'].reshape(128 * 128, 16)\n",
-    "    cod = data['l2_cod'].flatten().reshape(-1, 1)/1000\n",
+    "    cod = np.log1p(data['l2_cod']).flatten().reshape(-1, 1)\n",
     "    return bands, cod"
    ]
   },
@@ -76,7 +76,7 @@
    "source": [
     "#CREATE DATASET\n",
     "\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
@@ -107,9 +107,9 @@
     "test_size = len(dataset) - train_size - val_size\n",
     "\n",
     "generator = torch.Generator().manual_seed(1)\n",
-    "train_dataset, val_dataset, test_dataset = random_split(dataset, [train_size, val_size, test_size])\n",
+    "train_dataset, val_dataset, test_dataset = random_split(dataset, [train_size, val_size, test_size], generator=generator)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, generator=generator)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
    ]
