--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Optical_Distance/Cod_with_sklearn.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Optical_Distance/Cod_with_sklearn.ipynb
@@ -55,13 +55,13 @@
     "def get_cod(file):\n",
     "    data = np.load(file)\n",
     "    bands = data['rad'].reshape(128 * 128, 16)\n",
-    "    cod = data['l2_cod'].flatten().reshape(-1, 1)/1000\n",
+    "    cod = np.log1p(data['l2_cod']).flatten().reshape(-1, 1)\n",
     "    return bands, cod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9808bffb-2ea5-4972-949e-ffeadf424962",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
     "#CREATE DATASET\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "963a8dae-db89-4f79-bf55-7db13705b2a6",
    "metadata": {},
    "outputs": [],
@@ -97,14 +97,14 @@
     "\n",
     "lin_model = LinearRegression()\n",
     "forest_model = RandomForestRegressor(n_estimators=20, max_depth=7)\n",
-    "sgd_model = SGDRegressor(max_iter=1000, tol=1e-3, random_state=42)\n",
+    "sgd_model = SGDRegressor(max_iter=1000, tol=1e-3, random_state=1)\n",
     "ridge_model = BayesianRidge()\n",
     "grad_boost_model = HistGradientBoostingRegressor()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e60e3cb4-a7c1-4e19-9ac7-89130d0852d0",
    "metadata": {},
    "outputs": [
@@ -112,8 +112,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.1362\n",
-      "MSE: 39.9581\n"
+      "R²: 0.2123\n",
+      "MSE: 0.8950\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b6efc9d4-54cf-4de2-88ec-2848792ee411",
    "metadata": {},
    "outputs": [
@@ -139,8 +139,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.2672\n",
-      "MSE: 33.8982\n"
+      "R²: 0.5450\n",
+      "MSE: 0.5171\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7df8db9d-4ba7-46a6-8885-ce096960ce11",
    "metadata": {},
    "outputs": [
@@ -167,23 +167,17 @@
      "output_type": "stream",
      "text": [
       "/umbc/rs/cybertrn/reu2025/team1/research/Model1/envs/jupyter_env/lib/python3.12/site-packages/numpy/_core/_methods.py:170: RuntimeWarning: overflow encountered in reduce\n",
-      "  arrmean = umr_sum(arr, axis, dtype, keepdims=True, where=where)\n"
+      "  arrmean = umr_sum(arr, axis, dtype, keepdims=True, where=where)\n",
+      "/umbc/rs/cybertrn/reu2025/team1/research/Model1/envs/jupyter_env/lib/python3.12/site-packages/sklearn/linear_model/_bayes.py:418: RuntimeWarning: divide by zero encountered in divide\n",
+      "  [Vh.T, Vh / (eigen_vals_ + lambda_ / alpha_)[:, np.newaxis], XT_y]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.2682\n",
-      "MSE: 33.8496\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/umbc/rs/cybertrn/reu2025/team1/research/Model1/envs/jupyter_env/lib/python3.12/site-packages/sklearn/linear_model/_bayes.py:418: RuntimeWarning: divide by zero encountered in divide\n",
-      "  [Vh.T, Vh / (eigen_vals_ + lambda_ / alpha_)[:, np.newaxis], XT_y]\n"
+      "R²: 0.5514\n",
+      "MSE: 0.5097\n"
      ]
     }
    ],
@@ -201,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a30875a7-7b6a-4e89-9a37-d686b46345a9",
    "metadata": {},
    "outputs": [
@@ -209,8 +203,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.4757\n",
-      "MSE: 24.2537\n"
+      "R²: 0.6633\n",
+      "MSE: 0.3826\n"
      ]
     }
    ],
@@ -228,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "431da40c-cd2d-4113-bcd1-bc232c727102",
    "metadata": {},
    "outputs": [
@@ -236,8 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.7405\n",
-      "MSE: 12.0052\n"
+      "R²: 0.7864\n",
+      "MSE: 0.2428\n"
      ]
     }
    ],
