--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Particle_Size/Cps_unet_data_processor.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Particle_Size/Cps_unet_data_processor.ipynb
@@ -36,7 +36,7 @@
     "def get_cps(file):\n",
     "    data = np.load(file)\n",
     "    bands = data['rad']\n",
-    "    cps = data['l2_cps']/1000\n",
+    "    cps = np.log1p(data['l2_cps']),  # log(1 + cps)\n",
     "    return bands, cps"
    ]
   },
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14999it [08:38, 28.93it/s]\n"
+      "14973it [09:12, 27.10it/s]\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "#CREATE DATASET\n",
     "\n",
     "max_images = 15000\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
