--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Phase/Phase_unet_data_processor.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Phase/Phase_unet_data_processor.ipynb
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14999it [04:36, 54.30it/s] \n"
+      "14973it [08:59, 27.73it/s]\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "#CREATE DATASET\n",
     "\n",
     "max_images = 15000\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
