--- a/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Particle_Size/Cps_with_sklearn.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/Cloud_Particle_Size/Cps_with_sklearn.ipynb
@@ -55,13 +55,13 @@
     "def get_cps(file):\n",
     "    data = np.load(file)\n",
     "    bands = data['rad'].reshape(128 * 128, 16)\n",
-    "    cps = data['l2_cps'].flatten().reshape(-1, 1)/1000\n",
+    "    cps = np.log1p(data['l2_cps']).flatten().reshape(-1, 1)\n",
     "    return bands, cps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d1243d3d-060c-4050-92c7-4c62d426768b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
     "#CREATE DATASET\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "file_list = glob.glob('../ABI_Data/*.npz')\n",
+    "file_list = glob.glob('../ABI_Data_Scaled/*.npz')\n",
     "\n",
     "X = []\n",
     "y = []\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "223993a6-e77c-43d2-b92e-b3a813882aee",
    "metadata": {},
    "outputs": [],
@@ -97,14 +97,14 @@
     "\n",
     "lin_model = LinearRegression()\n",
     "forest_model = RandomForestRegressor(n_estimators=20, max_depth=7)\n",
-    "sgd_model = SGDRegressor(max_iter=1000, tol=1e-3, random_state=42)\n",
+    "sgd_model = SGDRegressor(max_iter=1000, tol=1e-3, random_state=1)\n",
     "ridge_model = BayesianRidge()\n",
     "grad_boost_model = HistGradientBoostingRegressor()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7dac8f7e-6792-4e77-aee6-86e2f2d6cdfe",
    "metadata": {},
    "outputs": [
@@ -112,8 +112,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.1974\n",
-      "MSE: 108.7080\n"
+      "R²: 0.2988\n",
+      "MSE: 1.6157\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ff604329-33b8-44d1-b521-4ecc1f07c171",
    "metadata": {},
    "outputs": [
@@ -139,8 +139,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.2894\n",
-      "MSE: 96.2375\n"
+      "R²: 0.4210\n",
+      "MSE: 1.3343\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "923f0d20-faa5-47d2-9eaf-69beecd816ee",
    "metadata": {},
    "outputs": [
@@ -174,8 +174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.2902\n",
-      "MSE: 96.1369\n"
+      "R²: 0.4235\n",
+      "MSE: 1.3285\n"
      ]
     },
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2c1b38e2-5180-4b83-b167-8034df54cd8f",
    "metadata": {},
    "outputs": [
@@ -209,8 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.4589\n",
-      "MSE: 73.2857\n"
+      "R²: 0.6087\n",
+      "MSE: 0.9017\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1ecc4c39-ddad-4439-b3d8-edfcf5572858",
    "metadata": {},
    "outputs": [
@@ -236,8 +236,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.6308\n",
-      "MSE: 49.9982\n"
+      "R²: 0.7392\n",
+      "MSE: 0.6009\n"
      ]
     }
    ],
