--- a/2025-projects/team-1/Scratch_Models_Finalized/MultiTask/Multitask_data_processor.ipynb
+++ b/2025-projects/team-1/Scratch_Models_Finalized/MultiTask/Multitask_data_processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e54f56c2-9e56-4c43-8ac7-1632968c4148",
    "metadata": {},
    "outputs": [],
@@ -47,30 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0af37ff9-2fb5-4cc9-9659-cc8230b087e9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "123it [00:35,  3.48it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m y = []\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i, file \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28menumerate\u001b[39m(file_list)):\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m     features, target = \u001b[43mget_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m     X.append(features)\n\u001b[32m     13\u001b[39m     y.append(target)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mget_features\u001b[39m\u001b[34m(file)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m np.load(file) \u001b[38;5;28;01mas\u001b[39;00m data:\n\u001b[32m      5\u001b[39m     bands = data[\u001b[33m'\u001b[39m\u001b[33mrad\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      6\u001b[39m     features = np.stack([\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m         \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43ml2_cloud_mask\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m,\n\u001b[32m      8\u001b[39m         data[\u001b[33m'\u001b[39m\u001b[33ml2_cloud_phase\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m      9\u001b[39m         data[\u001b[33m'\u001b[39m\u001b[33ml2_cod\u001b[39m\u001b[33m'\u001b[39m] * \u001b[32m0.001\u001b[39m,\n\u001b[32m     10\u001b[39m         data[\u001b[33m'\u001b[39m\u001b[33ml2_cps\u001b[39m\u001b[33m'\u001b[39m] * \u001b[32m0.001\u001b[39m\n\u001b[32m     11\u001b[39m     ])\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m bands, features\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/umbc/rs/cybertrn/reu2025/team1/research/Model1/envs/jupyter_env/lib/python3.12/site-packages/numpy/lib/_npyio_impl.py:245\u001b[39m, in \u001b[36mNpzFile.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m    243\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m is not a file in the archive\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    244\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m245\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mzip\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;28mbytes\u001b[39m:\n\u001b[32m    246\u001b[39m         magic = \u001b[38;5;28mbytes\u001b[39m.read(\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mformat\u001b[39m.MAGIC_PREFIX))\n\u001b[32m    247\u001b[39m         \u001b[38;5;28mbytes\u001b[39m.seek(\u001b[32m0\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/umbc/rs/cybertrn/reu2025/team1/research/Model1/envs/jupyter_env/lib/python3.12/zipfile/__init__.py:1624\u001b[39m, in \u001b[36mZipFile.open\u001b[39m\u001b[34m(self, name, mode, pwd, force_zip64)\u001b[39m\n\u001b[32m   1620\u001b[39m zef_file = _SharedFile(\u001b[38;5;28mself\u001b[39m.fp, zinfo.header_offset,\n\u001b[32m   1621\u001b[39m                        \u001b[38;5;28mself\u001b[39m._fpclose, \u001b[38;5;28mself\u001b[39m._lock, \u001b[38;5;28;01mlambda\u001b[39;00m: \u001b[38;5;28mself\u001b[39m._writing)\n\u001b[32m   1622\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m   1623\u001b[39m     \u001b[38;5;66;03m# Skip the file header:\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1624\u001b[39m     fheader = \u001b[43mzef_file\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43msizeFileHeader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1625\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(fheader) != sizeFileHeader:\n\u001b[32m   1626\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[33m\"\u001b[39m\u001b[33mTruncated file header\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/umbc/rs/cybertrn/reu2025/team1/research/Model1/envs/jupyter_env/lib/python3.12/zipfile/__init__.py:811\u001b[39m, in \u001b[36m_SharedFile.read\u001b[39m\u001b[34m(self, n)\u001b[39m\n\u001b[32m    807\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mCan\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt read from the ZIP file while there \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    808\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mis an open writing handle on it. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    809\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mClose the writing handle before trying to read.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    810\u001b[39m \u001b[38;5;28mself\u001b[39m._file.seek(\u001b[38;5;28mself\u001b[39m._pos)\n\u001b[32m--> \u001b[39m\u001b[32m811\u001b[39m data = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_file\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    812\u001b[39m \u001b[38;5;28mself\u001b[39m._pos = \u001b[38;5;28mself\u001b[39m._file.tell()\n\u001b[32m    813\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m max_images = \u001b[32m15000\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#CREATE DATASET\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m file_list = \u001b[43mglob\u001b[49m.glob(\u001b[33m'\u001b[39m\u001b[33m../ABI_Data_Scaled/*.npz\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      7\u001b[39m X = []\n\u001b[32m      8\u001b[39m y = []\n",
+      "\u001b[31mNameError\u001b[39m: name 'glob' is not defined"
      ]
     }
    ],
